--- a/base/templates/register.html
+++ b/base/templates/register.html
@@ -18,7 +18,7 @@
     {{ render_field(form.confirm, class="form-control", placeholder="confirm password") }}
     <br>
     <label class="form-check-label">
-            {{ form.accept_tos }} <label for="accept_tos">I accept the <a href='#'>terms of service</a></label>
+            {{ form.accept_tos }} <label for="accept_tos">I accept the <a href='{{ url_for("meta.tos") }}'>terms of service</a></label>
     </label>
     <br>
     <button type="submit" value="Register" class="btn btn-primary">Register</button>
