Fix fulltext search

--- a/base/static/css/style.css
+++ b/base/static/css/style.css
@@ -61,6 +61,7 @@ a.thumbnail:hover {
 /* pub */
 .pub_authors, .pub_line {
     font-size: small;
+    color: #467298;
 }
 
 .pub_links a, .comment-meta a {
