--- a/base/templates/login.html
+++ b/base/templates/login.html
@@ -2,6 +2,17 @@
 {% block content %}
 <div class="container">
     <div class="row">
+
+  <div id="messages-wrap">
+    <div id="messages">
+      {% for category, msg in get_flashed_messages(with_categories=true) %}
+      <div class="flash-{{ category }} alert alert-dismissable alert-{{ category }} flash-banner">
+          <p>{{ msg }}</p>
+      </div>
+      {% endfor %}
+    </div>
+  </div>
+        
         <div class="col-md-4 col-md-offset-4">
             <h1 class="text-center login-title">Sign in to continue to upvote.pub</h1>
             <div class="account-wall">
