--- a/base/templates/subreddits/subs.html
+++ b/base/templates/subreddits/subs.html
@@ -11,14 +11,15 @@
 {% for group, group_set in form.subs|groupby('sub_group.data') %}
 <h4>{{ group }}</h4>
 {{ form.csrf_token }}
-{% for sub in group_set %}
-    {{ sub.csrf_token }}
-    {{ sub.sub_name }}
-    {{ sub.sub_group }}
-    {{ sub.value }}
-    <label for='{{ sub.value.name }}'>{{ sub.sub_name.data }} - <a href="{{ url_for('subreddits.permalink', subreddit_name=sub.sub_name.data) }}">View</a></label><br />
-    
-{% endfor %}
+<div class='sub_group'>
+    {% for sub in group_set %}
+        {{ sub.csrf_token }}
+        {{ sub.sub_name }}
+        {{ sub.sub_group }}
+        {{ sub.value }}
+        <label for='{{ sub.value.name }}'>{{ sub.sub_name.data }} - <a href="{{ url_for('subreddits.permalink', subreddit_name=sub.sub_name.data) }}">View</a></label><br />
+    {% endfor %}
+</div>
 {% endfor %}
 <br />
 <button type="submit" value="Submit" class="btn btn-primary">Submit</button>
@@ -28,11 +29,12 @@
 
 {% for group, group_set in subreddit_list|groupby('group') %}
 <h4>{{ group }}</h4>
-{% for sub in group_set %}
-<a href="{{ url_for('subreddits.permalink', subreddit_name=sub.name) }}">{{ sub.name }}</a><br />
-
-{% endfor %}
-
+<div class='sub_group'>
+    <strong>{{ group }}</strong>
+    {% for sub in group_set %}
+    <a href="{{ url_for('subreddits.permalink', subreddit_name=sub.name) }}">{{ sub.name }}</a><br />
+    {% endfor %}
+</div>
 {% endfor %}
 
 
