Fix tasks and titles

--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -5,7 +5,7 @@
     <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
     <meta name="description" content="The front page of science!">
     <meta name="author" content="Lucas Ou-Yang">
-    <title>upvote.pub | {{ page_title }}</title>
+    <title>upvote.pub | {{ html_title or page_title }}</title>
     <meta name="keywords" content="science,publications,doi,pubmed,reddit,daniel e. cook">
 
     <!-- Bootstrap core CSS -->
