--- a/base/templates/macros.html
+++ b/base/templates/macros.html
@@ -37,18 +37,21 @@
                 <a href="{{ thread.pub_pdf_url }}" class="thumbnail pub_thumb" data-toggle="tooltip" data-placement="bottom" title="Download PDF">
                     <img src="https://storage.googleapis.com/pdf_thumbnails/{{ thread.thumbnail }}"/>
                 </a>
+            {% elif thread.pub_pdf_url == 'searching' %}
+                <div class='thumbnail pub_thumb no_pdf_thumb'>
+                                <div class='no_pdf'>
+                                    <span class='glyphicon glyphicon-time'></span>
+                                </div>
+                                <br />Looking for PDF</div>
             {% elif thread.pub_pdf_url %}
                 <a href="{{ thread.pub_pdf_url }}" class="thumbnail pub_thumb no_pdf_thumb" data-toggle="tooltip" data-placement="bottom" title="Download PDF">
                     <div class='no_pdf'>
                     <span class='glyphicon glyphicon-time'></span>
                     </div>
                     <br />
-                    {% if thread.pub_pdf_url == 'searching' %}
-                    Looking for PDF
-                    {% else %}
                     Loading<br />
                     Preview
-                    {% endif %}
+                    
                 </a>
             {% else %}
               <div class='thumbnail pub_thumb no_pdf_thumb' data-toggle="tooltip" data-placement="bottom" title="No PDF Found">
