--- a/base/templates/macros.html
+++ b/base/templates/macros.html
@@ -15,7 +15,7 @@
 
 
 {% macro render_pub(thread, user, slugify) %}
-
+{% set pub = thread.publication %}
 
 <div name="{{ thread.id }}" class="row listing-row">
           <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 listing-vote-box">  
@@ -33,18 +33,18 @@
           </div>
     <div class="col-lg-2 col-md-2 col-sm-2 hidden-xs listing-thumbnail-box">
         <div class='pub-img'>
-            {% if thread.pub_pdf_url and thread.thumbnail %}
-                <a href="{{ thread.pub_pdf_url }}" class="thumbnail pub_thumb" data-toggle="tooltip" data-placement="bottom" title="Download PDF">
-                    <img src="https://storage.googleapis.com/pdf_thumbnails/{{ thread.thumbnail }}"/>
+            {% if pub.pub_pdf_url and pub.pub_thumbnail %}
+                <a href="{{ pub.pub_pdf_url }}" class="thumbnail pub_thumb" data-toggle="tooltip" data-placement="bottom" title="Download PDF">
+                    <img src="https://storage.googleapis.com/pdf_thumbnails/{{ pub.pub_thumbnail }}.png"/>
                 </a>
-            {% elif thread.pub_pdf_url == 'searching' %}
+            {% elif pub.pub_pdf_url == 'searching' %}
                 <div class='thumbnail pub_thumb no_pdf_thumb'>
                                 <div class='no_pdf'>
                                     <span class='glyphicon glyphicon-time'></span>
                                 </div>
                                 <br />Looking for PDF</div>
-            {% elif thread.pub_pdf_url %}
-                <a href="{{ thread.pub_pdf_url }}" class="thumbnail pub_thumb no_pdf_thumb" data-toggle="tooltip" data-placement="bottom" title="Download PDF">
+            {% elif pub.pub_pdf_url %}
+                <a href="{{ pub.pub_pdf_url }}" class="thumbnail pub_thumb no_pdf_thumb" data-toggle="tooltip" data-placement="bottom" title="Download PDF">
                     <div class='no_pdf'>
                     <span class='glyphicon glyphicon-time'></span>
                     </div>
@@ -63,10 +63,10 @@
         </div>
     </div>
     <div class="col-lg-9 col-md-9 col-sm-9 col-xs-10 listing-text">
-        <a href="{{ thread.pub_url }}" class="listing-title">{{ thread.pub_title }}</a>
-        <div class='pub_authors'>{{ thread.pub_authors|safe }}</div>
+        <a href="{{ pub.pub_url }}" class="listing-title">{{ pub.pub_title }}</a>
+        <div class='pub_authors'>{{ pub.pub_authors|safe }}</div>
         <div class='pub_line'>
-            {{ thread.pub_date.strftime("%Y-%m-%d") }} — <em>{{ thread.pub_journal }}</em>
+            {{ pub.pub_date.strftime("%Y-%m-%d") }} — <em>{{ pub.pub_journal }}</em>
         </div>
 
 
@@ -85,29 +85,29 @@
 
             <a href="{{ url_for('threads.thread_permalink',
                           subreddit_name = thread.subreddit.name,
-                          title=slugify(thread.pub_title),
+                          title=slugify(pub.pub_title),
                           thread_id = thread.id) 
              }}">
                     {{ thread.comments.all()|length() }} Comments</a>
 
-            {% if thread.pub_doi %}
-                <small><a href='https://dx.doi.org/{{ thread.pub_doi }}' class='pub_id'>{{ thread.pub_doi }}</a></small>
+            {% if pub.pub_doi %}
+                <small><a href='https://dx.doi.org/{{ pub.pub_doi }}' class='pub_id'>{{ pub.pub_doi }}</a></small>
             {% endif %}
 
-            {% if thread.pub_pmid %}
-                <small><a href="https://www.ncbi.nlm.nih.gov/pubmed/{{ thread.pub_pmid }}" class='pub_id'>PMID {{ thread.pub_pmid }}</a></small>
+            {% if pub.pub_pmid %}
+                <small><a href="https://www.ncbi.nlm.nih.gov/pubmed/{{ pub.pub_pmid }}" class='pub_id'>PMID {{ pub.pub_pmid }}</a></small>
             {% endif %}
 
-            {% if thread.pub_pmc %}
-                <small><a href="https://www.ncbi.nlm.nih.gov/pmc/articles/{{ thread.pub_pmcid }}" class='pub_id'>PMC {{ thread.pub_pmid }}</a></small>
+            {% if pub.pub_pmc %}
+                <small><a href="https://www.ncbi.nlm.nih.gov/pmc/articles/{{ pub.pub_pmcid }}" class='pub_id'>PMC {{ pub.pub_pmid }}</a></small>
             {% endif %}
 
-            {% if thread.pub_arxiv %}
-                <small><a href="https://arxiv.org/abs/{{ thread.pub_arxiv }}" class='pub_id'>arXiv {{ thread.pub_arxiv }}</a></small>
+            {% if pub.pub_arxiv %}
+                <small><a href="https://arxiv.org/abs/{{ pub.pub_arxiv }}" class='pub_id'>arXiv {{ pub.pub_arxiv }}</a></small>
             {% endif %}
 
-            {% if thread.pub_biorxiv %}
-                <small><a href="{{ thread.pub_biorxiv_url }}" class='pub_id'>bioRxiv {{ thread.pub_biorxiv }}</a></small>
+            {% if pub.pub_biorxiv %}
+                <small><a href="{{ pub.pub_biorxiv_url }}" class='pub_id'>bioRxiv {{ pub.pub_biorxiv }}</a></small>
             {% endif %}
 
             {% if config.DEBUG %}
