--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -81,7 +81,7 @@
     <div class="row" class="" id="footer-row">
       <div class="col-lg-12">
         <hr />
-        upvote.pub — <a href='#'>Terms of Service</a> — <a href='#'>Privacy Policy</a>
+        <a href='{{ url_for("frontends.render_markdown", page='faq') }}'>FAQ</a> — <a href='{{ url_for("frontends.render_markdown", page='terms-of-service') }}'>Terms of Service</a> — <a href='{{ url_for("frontends.render_markdown", page='privacy-policy') }}'>Privacy Policy</a>
       </div>
     </div>
     </div>
