--- a/base/templates/register.html
+++ b/base/templates/register.html
@@ -10,7 +10,7 @@
     {{ render_field(form.username, class="form-control", placeholder="username", autofocus="") }}
     <br>
     {{ render_field(form.email, class="form-control", placeholder="email") }}
-    <small class='text-primary'>Only academic emails are accepted.</small>
+    <small class='text-primary'>Only academic emails are accepted at this time.</small>
     <br />
     <br />
     {{ render_field(form.password, class="form-control", placeholder="password") }}
@@ -18,7 +18,7 @@
     {{ render_field(form.confirm, class="form-control", placeholder="confirm password") }}
     <br>
     <label class="form-check-label">
-            {{ form.accept_tos }} <label for="accept_tos">I accept the <a href='{{ url_for("meta.tos") }}'>terms of service</a></label>
+            {{ form.accept_tos }} <label for="accept_tos">I accept the <a href='{{ url_for("frontends.render_markdown", page='terms-of-service') }}'>Terms of Service</a></label>
     </label>
     <br>
     <button type="submit" value="Register" class="btn btn-primary">Register</button>
