--- a/base/static/css/style.css
+++ b/base/static/css/style.css
@@ -133,8 +133,13 @@ a.thumbnail:hover {
     text-decoration: underline;
 }
 
+
 .comments-tree {
     margin-left: -50px;
+    overflow-x: auto;
+    padding-bottom: -17px;
+    width: 100%;
+    height: 100%;
 }
 
 .inverse-white-button {
